<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardCornerRadius="@dimen/_3sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:text="@string/rent_estimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:singleLine="true"
            android:maxLength="2"
            android:inputType="number"
            android:id="@+id/enter_no_dwm"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/gray_border_round"
            android:padding="@dimen/_7sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11sdp"
            android:hint="@string/enter_number_of_days_week_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:elevation="6dp"
                android:background="@color/yellow"
                android:id="@+id/day_tv"
                android:padding="@dimen/_7sdp"
                android:text="@string/day"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content" />
            <TextView
                android:elevation="6dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/dark_gray"
                android:id="@+id/week_tv"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/white"
                android:text="@string/week"
                android:gravity="center"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content" />
            <TextView
                android:elevation="6dp"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@color/dark_gray"
                android:id="@+id/month"
                android:padding="@dimen/_7sdp"
                android:text="@string/month"
                android:gravity="center"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/estimated_rent_inr"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/_13sdp"
                android:id="@+id/rent_estimation_price"
                android:hint="0"
                android:textStyle="bold"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/primaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/_13sdp"
                android:hint="/-"
                android:textStyle="bold"
                android:textColor="@color/primaryDark"
                android:textColorHint="@color/primaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/including_service_taxes"
                android:textColor="@color/dark_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:elevation="6dp"
            android:id="@+id/request_for_book_tv"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAllCaps="false"
            android:text="@string/request_for_a_book"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/white"
            android:background="@color/primaryDark"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp" />
    </LinearLayout>

</android.support.v7.widget.CardView>