<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.RequestForABook">

    <android.support.v7.widget.Toolbar
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        android:id="@+id/profile_edit_toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:fillViewport="true"
        android:padding="@dimen/_20sdp"
        android:layout_below="@+id/profile_edit_toobar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:textSize="@dimen/_10sdp"
                android:hint="@string/enter_current_password"
                android:padding="@dimen/_10sdp"
                android:id="@+id/current_password_et"
                android:background="@drawable/gray_border_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/current_password_et"
                android:textSize="@dimen/_10sdp"
                android:hint="@string/enter_new_password"
                android:padding="@dimen/_10sdp"
                android:id="@+id/new_password_et"
                android:background="@drawable/gray_border_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/new_password_et"
                android:textSize="@dimen/_10sdp"
                android:hint="@string/enter_confirm_new_password"
                android:padding="@dimen/_10sdp"
                android:id="@+id/confirm_new_password_et"
                android:background="@drawable/gray_border_round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_below="@+id/confirm_new_password_et"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/login_now_btn"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>