<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.ProfileList">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/dfafsa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:transitionName="toolbar_trans"
            android:id="@+id/toolbar_profile_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@+id/dfafsa"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/received_tv"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textStyle="bold"
            android:text="@string/received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <TextView
            android:id="@+id/sent_tv"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textStyle="bold"
            android:text="@string/sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <TextView
            android:transitionName="Toolbar_trans"
            android:id="@+id/request_for_book_tv"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:textStyle="bold"
            android:text="@string/request_for_a_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
    </LinearLayout>

</RelativeLayout>